--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="password-box">
             <h2>请输入访问密码</h2>
             <!-- 表单提交逻辑：仅正确密码能跳转到#password-modal触发隐藏 -->
-            <form onsubmit="this.action = this.password.value === '青云19班牛逼' ? '#password-modal' : '#error'">
+            <form onsubmit="this.action = this.password.value === '青云19班' ? '#password-modal' : '#error'">
                 <input type="text" name="password" class="password-input" placeholder="请输入密码" required>
                 <button type="submit" class="password-btn">确认进入</button>
             </form>
